[package]
name = "cluster-lend"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cluster_lend"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = ["test", "debug"]
test = []
debug = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

arrayref = "0.3.7"
bitflags = "2.5.0"
bytemuck = "1.16.0"
fixed = { version = "=1.23.1" }
fixed-macro = "1.1"
uint = "0.9.5"

num_enum = "0.7.2"
derivative = "2.2.0"
static_assertions = "1.1.0"

strum = { git = "https://github.com/hubbleprotocol/strum", features = [
    "derive",
], branch = "checked_arithmetics" }

pyth-sdk-solana = "0.10.1"
bincode = "1.3.3"
cfg-if = "1.0.0"


[dev-dependencies]
solana-program-test = "^1.17"
solana-program = "^1.17"
solana-sdk = "^1.17"
anyhow = "1.0.66"
